# clean-architecture-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  yoyo.ini
clean_architecture_example/: gunicorn.conf.py
clean_architecture_example/app/application/common/: id_provider.py  interactor.py  jwt_processor.py
clean_architecture_example/app/application/contracts/authentication/: authentication_response.py  register_request.py
clean_architecture_example/app/application/contracts/comments/: comment_list_response.py  get_comments_request.py  (+2 more)
clean_architecture_example/app/domain/comments/: comment.py  error.py  repository.py
clean_architecture_example/app/domain/common/: entity.py
clean_architecture_example/app/domain/posts/: error.py  post.py  repository.py
clean_architecture_example/app/domain/users/: error.py  repository.py  user.py
clean_architecture_example/app/infrastructure/: date_time_provider.py  ioc.py  settings.py
clean_architecture_example/app/infrastructure/authentication/: id_provider.py  jwt_processor.py  jwt_settings.py
clean_architecture_example/app/infrastructure/persistence/: unit_of_work.py
clean_architecture_example/app/infrastructure/security/: password_hasher.py
clean_architecture_example/app/infrastructure/utils/: exceptions.py  get_env_var.py
clean_architecture_example/app/web_api/: exc_handlers.py  main.py
clean_architecture_example/app/web_api/dependencies/: authentication.py
clean_architecture_example/app/web_api/routers/: __init__.py  auth.py  comment.py  post.py  user.py
clean_architecture_example/contracts/authentication/: authentication_response.py  authentication_token.py  login_request.py
clean_architecture_example/contracts/comments/: comment_details_response.py  comment_list_response.py
clean_architecture_example/contracts/posts/: get_posts_request.py  post_details_response.py  post_list_response.py  update_post_request.py
clean_architecture_example/contracts/users/: current_user_response.py
clean_architecture_example/core/application/common/: date_time_provider.py  id_provider.py  interactor.py  jwt_processor.py  password_hasher.py  user_context.py
clean_architecture_example/core/domain/comments/: comment.py  error.py  repository.py
clean_architecture_example/core/domain/common/: entity.py  error.py
clean_architecture_example/core/domain/posts/: error.py  post.py  repository.py
clean_architecture_example/core/domain/users/: error.py  repository.py  user.py
docs/: README.md
env/: .env.template  env.sh.template
scripts/: env.example.sh  start.sh
(+34 files in other folders)
