[tool.poetry]
name = "clean-architecture-example"
version = "0.0.1"
description = "Blog RESTful API with clean architecture"
authors = ["Alim Abrekov <abrekovalim38702@gmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi = "^0.110.1"
dishka = "^0.9.0"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
yoyo-migrations = "^8.2.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "clean_architecture_example" }

[project]
name = "clean-architecture-example"
version = "0.0.1"
authors = [
    { name = "Alim Abrekov", email = "abrekovalim38702@gmail.com" },
]
description = "Blog RESTful API with clean architecture"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-jose",
    "passlib",
    "fastapi",
    "psycopg[binary]",
    "dishka",
    "gunicorn",
    "uvicorn",
    "pydantic",
    "yoyo-migrations",
]
[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/Dark04072006/clean-architecture-example"
"Bug Tracker" = "https://github.com/Dark04072006/clean-architecture-example/issues"
